@@ -1,4 +1,9 @@
 2008-01-05  Nestor Salceda  <nestor.salceda@gmail.com>
+
+	* AvoidConstructorsInStaticTypesRule.cs: Use rocks for check if a method
+	is autogenerated.
+
+2008-01-05  Nestor Salceda  <nestor.salceda@gmail.com>
 	
 	* Makefile.am: Compile with -langversion:linq parameter.
 	* UseValueInPropertySetterRule.cs: Use rocks for check if the method
